<resources>
    <string name="app_name">ShapeList</string>
    <string name="action_settings">Settings</string>
    <string name="title_text_welcome">Welcome!</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_repeatpassword">Repeat password</string>
    <string name="login_button_text">LOG IN</string>
    <string name="signup_button_text">SIGN UP</string>
    <string name="title_text_registration">Registration</string>
    <string name="share_list">Share List</string>
    <string name="menu_more">More</string>
    <string name="menu_logout">Log out</string>
    <string name="shape_add_text">Press "+" to add some shapes</string>
    <string name="choose_shape">Choose shape</string>
    <string name="choose_color">Choose color</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="hint_title">Type here...</string>
    <string name="hint_description">Type here...</string>
    <string name="add_button_text">ADD</string>
</resources>
